--- a/AQI_prediction.ipynb
+++ b/AQI_prediction.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMjAVDbFWSbvzhMzfB7yVqn",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AdilesWolfe/AQI-iQ/blob/main/AQI_prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -6175,10 +6187,8 @@
     {
       "cell_type": "code",
       "source": [
-        "train_pred = knn.predict(X_train) # Predicting train\n",
-        "test_pred = knn.predict(X_test) # Predicting test\n",
-        "\n",
-        "# Evaluation for KNN\n",
+        "train_pred = knn.predict(X_train)\n",
+        "test_pred = knn.predict(X_test)\n",
         "RMSE_train = (np.sqrt(mean_squared_error(y_train, train_pred)))\n",
         "RMSE_test = (np.sqrt(mean_squared_error(y_test, test_pred)))\n",
         "print('RMSE Train Data = ', str(RMSE_train))\n",
@@ -6658,10 +6668,9 @@
     {
       "cell_type": "code",
       "source": [
-        "train_pred = dtr.predict(X_train) # Predicting train\n",
-        "test_pred = dtr.predict(X_test) # Predicting test\n",
+        "train_pred = dtr.predict(X_train)\n",
+        "test_pred = dtr.predict(X_test)\n",
         "\n",
-        "# Evaluation for Decision Tree Regressor\n",
         "RMSE_train = (np.sqrt(mean_squared_error(y_train, train_pred)))\n",
         "RMSE_test = (np.sqrt(mean_squared_error(y_test, test_pred)))\n",
         "print('RMSE Train Data = ', str(RMSE_train))\n",
@@ -7141,10 +7150,9 @@
     {
       "cell_type": "code",
       "source": [
-        "train_pred = rfr.predict(X_train) # Predicting train\n",
-        "test_pred = rfr.predict(X_test) # Predicting test\n",
+        "train_pred = rfr.predict(X_train)\n",
+        "test_pred = rfr.predict(X_test)\n",
         "\n",
-        "# Evaluation for Randome Forest Regressor\n",
         "RMSE_train = (np.sqrt(mean_squared_error(y_train, train_pred)))\n",
         "RMSE_test = (np.sqrt(mean_squared_error(y_test, test_pred)))\n",
         "print('RMSE Train Data = ', str(RMSE_train))\n",
